# dppo

./: pyproject.toml
agent/finetune/: train_ppo_diffusion_img_agent.py  train_ppo_gaussian_img_agent.py
src/dppo/model/: __init__.py
src/dppo/model/common/: __init__.py  critic.py  mlp_gaussian.py
src/dppo/model/diffusion/: __init__.py  unet.py
src/dppo/util/: __init__.py
