[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dppo"
version = "0.8.0"
description = "Fine-tuning diffusion policies with PPO."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "av",
    "einops",
    "gdown",
    "hydra-core",
    "imageio",
    "matplotlib",
    "omegaconf",
    "pretty_errors",
    "torch",
    "tqdm",
    "wandb"
]

[project.optional-dependencies]
gym = [
    "cython<3",
    "d4rl",
    "patchelf",
]
kitchen = [
    "cython<3",
    "d4rl",
    "dm_control==1.0.16",
    "mujoco==3.1.6",
    "patchelf",
]
robomimic = [
    "cython<3",
    "d4rl",
    "patchelf",
    "robomimic @ git+https://github.com/ARISE-Initiative/robomimic.git",
    "robosuite @ git+https://github.com/ARISE-Initiative/robosuite.git@v1.4.1",
]
d3il = [
    "cython<3",
    "d4rl",
    "gin-config",
    "patchelf",
    "pin",
]
furniture = [
    "cython<3",
    "d4rl",
    "ipdb==0.13.13",
    "patchelf",
]
exact = [   # exact likelihood
    "torchdiffeq",
]
all = [
    "cython<3",
    "d4rl",
    "gin-config",
    "ipdb==0.13.13",
    "patchelf",
    "pin",
    "robomimic @ git+https://github.com/ARISE-Initiative/robomimic.git",
    "robosuite @ git+https://github.com/ARISE-Initiative/robosuite.git@v1.4.1",
]

[project.urls]
Homepage = "https://diffusion-ppo.github.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.wheel]
exclude = []
